1.安装项目设置桌面快捷方式和程序菜单设置 2. .gitnore过滤文件设置

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /GeneralSetupProject/Release/*.exe
 /GeneralSetupProject/Release/*.msi
 /.vs/
+/Import-excel-to-sql-serverSetup Project/Debug/*.exe
+/Import-excel-to-sql-serverSetup Project/Release/*.exe
